typization in ConcurrentKafkaConsumer, renamed free thread